
Tidying as I peruse, putting together an action plan.
----------------------------------------------------------------------
Wed Nov 10 13:40:53 2010                        Michael Jennings (mej)

Initial refactoring of existing Object parent class.  More methods to
come, and need to do search-and-replace to fix breakage.
----------------------------------------------------------------------
Wed Nov 10 20:39:04 2010                        Michael Jennings (mej)

A couple more template methods.
----------------------------------------------------------------------
Thu Nov 11 00:11:52 2010                        Michael Jennings (mej)

Object documentation improvements and reformatting.
----------------------------------------------------------------------
Thu Nov 11 00:27:41 2010                        Michael Jennings (mej)

More touchups and documentation.
----------------------------------------------------------------------
Wed Dec  8 16:04:27 2010                        Michael Jennings (mej)

Make serialize() and unserialize() proper methods.
----------------------------------------------------------------------
Wed Dec  8 18:02:54 2010                        Michael Jennings (mej)

Minor cleanups.
----------------------------------------------------------------------
Tue Dec 14 20:37:29 2010                        Michael Jennings (mej)

Support get/set for array-based (multi-value) members.
----------------------------------------------------------------------
Tue Dec 14 22:27:26 2010                        Michael Jennings (mej)

Working on fixing ObjectSet initialization with object hashes.
----------------------------------------------------------------------
Tue Dec 14 22:51:50 2010                        Michael Jennings (mej)

add() and del() forceably use arrays now.  set("foo", undef) or
del("foo") will delete a member entirely.
----------------------------------------------------------------------